[package]
name = "yew-component"
version = "0.1.0"
authors = ["Rakshith Ravi <rakshith.ravi@gmx.com>"]
edition = "2018"
description = "A simple macro to generate yew components from a single struct declaration"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.42", features = ["full"]}
quote = "1.0.8"
proc-macro2 = "1.0.24"
